# itmo-2nd-sem-prog-tasks

./: CMakeLists.txt  ProgTasksCPP.7z  lab1.cpp  lab1.h  lab10.cpp  lab10.h  lab2.cpp  lab2.h  lab3.cpp  lab3.h  lab4.cpp  lab4.h  lab5.cpp  lab5.h  lab6.cpp  lab6.h  lab7.h  lab8.h  main.cpp
