cmake_minimum_required(VERSION 3.13)
project(ProgTasksCPP)

set(CMAKE_CXX_STANDARD 14)


add_executable(ProgTasksCPP main.cpp lab1.h lab1.cpp
        lab2.cpp lab2.h
        lab3.cpp lab3.h
        lab4.cpp lab4.h
        lab5.cpp lab5.h
        lab6.cpp lab6.h
        lab7.cpp lab7.h
        lab8.cpp lab8.h
        lab10.cpp lab10.h)